# Modelo-Motoneuronio

./: .gitignore  Anotações  Classes.py  README.md  adjust_model.py  analysis.py  dynamicalfiringrate.ipynb  dynfirtest.py  funçoes.py  gamma_rate_simulation.py  gamma_studies.py  gammapointprocess.mod  gammastimstart.mod  marimo_README.md  mn.mod  pyproject.toml  requirements.txt  teste 1  testeRede copy.ipynb  testeRede.ipynb  three_populations_spikes.py
Notebooks/: analysis.ipynb  dynamicalfiringrate.ipynb  force_generation_calcium_test.ipynb  force_generation_test.ipynb  replicação.ipynb  testeRede.ipynb  teste_semCa.ipynb  testew_Ca.ipynb  testew_Ca_Umax=2000.ipynb  testew_Ca_delays.ipynb
força.Umax=2000/: Ca_forca_ref1000_Umax=2000.csv  Ca_forca_ref100_Umax=2000.csv  Ca_forca_ref200_Umax=2000.csv  Ca_forca_ref300_Umax=2000.csv  Ca_forca_ref400_Umax=2000.csv  Ca_forca_ref500_Umax=2000.csv  Ca_forca_ref600_Umax=2000.csv  Ca_forca_ref700_Umax=2000.csv  Ca_forca_ref800_Umax=2000.csv  Ca_forca_ref900_Umax=2000.csv
results/: ISI_statistics.csv  all_ISIs.csv  force_cv_summary.txt
scr/: Classes.py
spikedata.Umax=2000/: Ca_cell_spike_ref_1000_Umax=2000.csv  Ca_cell_spike_ref_100_Umax=2000.csv  Ca_cell_spike_ref_200_Umax=2000.csv  Ca_cell_spike_ref_300_Umax=2000.csv  Ca_cell_spike_ref_400_Umax=2000.csv  Ca_cell_spike_ref_500_Umax=2000.csv  Ca_cell_spike_ref_600_Umax=2000.csv  Ca_cell_spike_ref_700_Umax=2000.csv  Ca_cell_spike_ref_800_Umax=2000.csv  Ca_cell_spike_ref_900_Umax=2000.csv
spikedatasource.Umax=2000/: Ca_spike_data_ref_1000_Umax=2000.csv  (+9 more)
src/: Classes.py  (+9 more)
(+275 files in other folders)
