[project]
name = "modelo-motoneuronio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "libneuroml>=0.6.5",
    "matplotlib>=3.10.1",
    "mpi4py>=4.0.3",
    "neuron>=8.2.6",
    "numpy==1.26",
    "pandas>=2.2.3",
    "pyneuroml>=1.3.15",
    "pynn[neuron]>=0.12.4",
    "scipy>=1.15.3",
]
